Attempt to get Parse Login and Facebook Login. Weird error related to not finding the bonds framework. Didn't happen before. Even when I reset to a previous commit, the problem happened again.

--- a/PhotoZap/Info.plist
+++ b/PhotoZap/Info.plist
@@ -20,12 +20,27 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>722763271190870</string>
+	<key>FacebookDisplayName</key>
+	<string>PhotoZap</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb722763271190870</string>
+			</array>
+		</dict>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string></string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
