Got navigation bar to change color as well as its text. Had to change the choose photo start screen to be the album screen because there were some glitches with starting on the camera roll.

--- a/PhotoZap/Info.plist
+++ b/PhotoZap/Info.plist
@@ -31,6 +31,10 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStatusLightContent</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>FacebookAppID</key>
 	<string>722763271190870</string>
 	<key>FacebookDisplayName</key>
